<resources>
    <string name="app_name">socialproyecto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Incio</string>
    <string name="menu_gallery">Mensajes</string>
    <string name="menu_slideshow">Crear Publicación</string>
    <string name="menu_contacts">Contactos</string>
    <string name="menu_ranking">Ranking</string>
</resources>